[package]
authors = ["Jørgen Nordmoen <jorgen.nordmoen@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface the HC-SR04 (ultrasonic distance sensor)"
documentation = "https://docs.rs/hc-sr04"
keywords = ["embedded-hal-driver", "ultrasonic distance", "sensor"]
license = "MIT/Apache-2.0"
name = "hc-sr04"
readme = "README.md"
repository = "https://github.com/nordmoen/hc-sr04"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2.3"
nb = "0.1.2"

[dev-dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-rtfm = "0.5.1"
stm32f3-discovery = "0.4.0"
panic-halt = "0.2.0"


# For the stm32f303vc mcu
[dependencies.stm32f3xx-hal]
features = ["stm32f303xc"]
version = "0.4.3"

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true
